release: v0.3.6.0
